igonre this files

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,6 @@ node_modules/
 /playwright/.cache/
 tests/swag-labs.spec.js
 tests/shikhowebsite.spec.js
+tests/demo-todo-app.spec.js
+tests/example.spec.js
+
